# Log-Analyzer

./: CMakeLists.txt  README.md
include/: argParser.h  errorHandler.h  fileReader.h  logAnalyzer.h  logEntry.h  logFilter.h
src/: argParser.cpp  argParser.h  errorHandler.cpp  errorHandler.h  fileReader.cpp  fileReader.h  logAnalyzer.cpp  logAnalyzer.h  logEntry.cpp  logEntry.h  logFilter.cpp  logParser.cpp  logParser.h  main.cpp
tests/: CMakeLists.txt
